; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_checkout.c_submodule_is_config_only.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_checkout.c_submodule_is_config_only.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@GIT_SUBMODULE_STATUS_IN_CONFIG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*)* @submodule_is_config_only to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @submodule_is_config_only(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* null, i32** %6, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %8, align 4
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = call i64 @git_submodule_lookup(i32** %6, i32 %11, i8* %12)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %29

16:                                               ; preds = %2
  %17 = load i32*, i32** %6, align 8
  %18 = call i64 @git_submodule_location(i32* %7, i32* %17)
  %19 = icmp slt i64 %18, 0
  br i1 %19, label %24, label %20

20:                                               ; preds = %16
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* @GIT_SUBMODULE_STATUS_IN_CONFIG, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %20, %16
  store i32 1, i32* %8, align 4
  br label %25

25:                                               ; preds = %24, %20
  %26 = load i32*, i32** %6, align 8
  %27 = call i32 @git_submodule_free(i32* %26)
  %28 = load i32, i32* %8, align 4
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %25, %15
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @git_submodule_lookup(i32**, i32, i8*) #1

declare dso_local i64 @git_submodule_location(i32*, i32*) #1

declare dso_local i32 @git_submodule_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
